testing/tests/melt/positive/1.c
// A simple program
int main() {
    int x;
    int y;
    int z;

    x = 1 ;
    y = 2 ;
    z = x * y +2 ;
}
