testing/tests/melt/negative/1.c
// A simple program
int main() {
    int x;
    int y;
    int z;

    x = = 1 ;    // an error
    y = 2 ;
    z = x * y +2 ;
}
